--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -19,10 +19,10 @@
                   <div> Inserisci i dati per accedere al tuo account!</div>
                   <hr>
 
-                  <!-- Email -->
+                  <!-- Username -->
                   <div class="form-outline mb-1 input-group">
                     <div class="input-group-text"><i class="fa fa-envelope fa-fw"></i></div>
-                    <input type="email" class="form-control" name="email" placeholder="Email" value="{{email}}"
+                    <input type="text" class="form-control" name="username" placeholder="Username" value="{{username}}"
                       required />
                   </div>
 
