--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -18,15 +18,15 @@
                   <p class="text-center">Compila il form per creare un nuovo account!</p>
                   <hr>
 
-                  <!-- Nome e cognome -->
+                  <!-- Nome e surname -->
                   <div class="row mb-3">
                     <div class="form-outline col col-xs-6">
-                      <label for="nome">Nome</label>
-                      <input type="text" class="form-control" name="nome" placeholder="Nome" required />
+                      <label for="name">Nome</label>
+                      <input type="text" class="form-control" name="name" placeholder="Nome" required />
                     </div>
                     <div class="col col-xs-6">
-                      <label for="cognome">Cognome</label>
-                      <input type="text" class="form-control" name="cognome" placeholder="Cognome" required />
+                      <label for="surname">Cognome</label>
+                      <input type="text" class="form-control" name="surname" placeholder="Cognome" required />
                     </div>
                   </div>
 
@@ -39,8 +39,8 @@
 
                     <!-- Sesso -->
                     <div class="col col-xs-6">
-                      <label for="sesso">Sesso</label>
-                      <select name="sesso" id="sesso" class="form-select" required>
+                      <label for="gender">Sesso</label>
+                      <select name="gender" id="gender" class="form-select" required>
                         <option value="" selected></option>
                         <option value="M">Maschio</option>
                         <option value="F">Femmina</option>
@@ -49,10 +49,10 @@
                     </div>
                   </div>
 
-                  <!-- Email -->
+                  <!-- Username -->
                   <div class="form-outline mb-3 input-group">
                     <div class="input-group-text"><i class="fa fa-envelope fa-fw"></i></div>
-                    <input type="email" class="form-control" name="email" placeholder="Email" required />
+                    <input type="text" class="form-control" name="username" placeholder="Username" required />
                   </div>
 
                   <!-- Password -->
